Fix line hieght and spacing of h1 and h2

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: "Crimson Text", sans-serif;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
@@ -9,20 +10,23 @@ html {
 
 h1 {
   color: #555;
-  line-height: 1.3;
+  line-height: 0;
   font-weight: normal;
   padding-top: 2px;
 }
 
 h1 + p {
   font-style: italic;
-  line-height: 1.3;
-  font-size: 1.125rem;
+  line-height: 1;
+  font-size: 1rem;
   padding-top: 0;
+  padding-bottom: 1.125rem;
+  border-bottom: 1px solid #999
 }
 
 body {
-  margin: 1em;
+  margin: 0;
+  padding: 1.3em;
   color: #555;
 }
 
@@ -32,4 +36,5 @@ article ol {
 
 blockquote {
   color: #555;
+  font-size: 1.125rem;
 }
